syntax = "proto3";

package bib.v1;

option go_package = "bib/api/proto/bib/v1;bibv1";

import "bib/v1/common.proto";

// Data transfer protocol messages for /bib/data/1.0.0

// DataRequest is the request message for data operations
message DataRequest {
  string request_id = 1;

  oneof request {
    GetDatasetInfoRequest get_dataset_info = 2;
    GetChunkRequest get_chunk = 3;
    GetChunksRequest get_chunks = 4;
  }
}

// DataResponse is the response message for data operations
message DataResponse {
  string request_id = 1;
  bool success = 2;
  Error error = 3;

  oneof response {
    GetDatasetInfoResponse get_dataset_info = 4;
    GetChunkResponse get_chunk = 5;
    GetChunksResponse get_chunks = 6;
  }
}

// GetDatasetInfoRequest requests dataset metadata
message GetDatasetInfoRequest {
  string dataset_id = 1;
  string hash = 2;  // Alternative lookup by hash
}

// GetDatasetInfoResponse returns dataset metadata
message GetDatasetInfoResponse {
  DatasetInfo dataset = 1;
}

// GetChunkRequest requests a single chunk
message GetChunkRequest {
  string dataset_id = 1;
  string dataset_hash = 2;
  int32 chunk_index = 3;
}

// GetChunkResponse returns a chunk
message GetChunkResponse {
  ChunkData chunk = 1;
}

// GetChunksRequest requests multiple chunks
message GetChunksRequest {
  string dataset_id = 1;
  string dataset_hash = 2;
  repeated int32 chunk_indices = 3;
}

// GetChunksResponse returns multiple chunks
message GetChunksResponse {
  repeated ChunkData chunks = 1;
}

// ChunkData contains chunk data and metadata
message ChunkData {
  string dataset_id = 1;
  int32 index = 2;
  string hash = 3;
  int64 size = 4;
  bytes data = 5;
}

// DataTransferConfig configures data transfer parameters
message DataTransferConfig {
  // chunk_size is the size of each chunk in bytes
  int64 chunk_size = 1;

  // max_concurrent is the max concurrent chunk downloads
  int32 max_concurrent = 2;

  // timeout_seconds is the per-chunk timeout
  int32 timeout_seconds = 3;
}

